@@ -1,3 +1,13 @@
+2001-12-03  Glynn Foster  <glynn.foster@sun.com>
+
+	* extern.c, session.c, session.h: 
+	s/load_up_globals/load_global_config. Can't be arsed doing much
+	more on this until this evening.
+	
+	* main.c: The most useful commit of the panel2's history thus 
+	far. Use 'I_LOVE_PANEL_CRACK' to get rid of that fucking annoying
+	caveat dialog.
+
 2001-12-03  Malcolm Tredinnick <malcolm@commsecure.com.au>
 	* menu.c: Replace a bunch of references to .gnome/ with the
 	  GNOME_DOT_GNOME constant from <libgnome/gnome-init.h>. For
